draggable folder tree component

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@iconify/react": "^3.2.0",
+    "@minoru/react-dnd-treeview": "^3.4.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "latest",
@@ -31,6 +32,8 @@
     "query-string": "^7.1.1",
     "react": "latest",
     "react-apexcharts": "^1.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "latest",
     "react-router-dom": "^6.2.2",
     "react-scripts": "latest",
