--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "query-string": "^7.1.1",
     "react": "latest",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "latest",
