--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "latest",
     "react-social-login-buttons": "^3.6.0",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "react-split-pane": "^0.1.92"
   },
   "browserslist": {
     "production": [
