--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/styles": "^5.8.0",
     "@mui/x-data-grid": "^5.7.0",
     "@mui/x-data-grid-pro": "^5.7.0",
+    "@react-oauth/google": "^0.8.0",
     "apexcharts": "^3.34.0",
     "axios": "^0.26.1",
     "axios-jwt": "^1.7.6",
